--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.efsavage</groupId>
 	<artifactId>hello-world-war</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.3</version>
 	<packaging>war</packaging>
 	<name>Hello World Web Application Repository</name>
 	<description>Simplest possible Java Webapp</description>
@@ -23,7 +23,23 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 			</plugin>
-		</plugins>
+	<plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.7.0.1746</version>
+      </plugin>
+    </plugins>
 	</build>
-
+	<distributionManagement>
+        <repository>
+        <id>nexus3</id>
+        <name>my-repo</name>
+        <url>http://34.204.179.165:8081/repository/my-repo</url>
+        </repository>
+        <snapshotRepository>
+        <id>nexus3</id>
+        <name>my-repo</name>
+        <url>http://34.204.179.165:8081/repository/my-repo</url>
+        </snapshotRepository>
+        </distributionManagement>
 </project>
